# dki-tender-inspection-priority

./: .dockerignore  .env.example  .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  PRD.md  README.md  TASKS.md  docker-compose.yml  pyproject.toml
artifacts/: baseline_config.json  baseline_ranking.csv  feature_schema.json  isolation_forest_config.json  isolation_forest_model.joblib  isolation_forest_ranking.csv  manifest.json  model_experiment_config.json  ranking_explanations.json
backend/app/: config.py  main.py
datasets/: inaproc_realisasi_tender_dki_jakarta_2024.csv  inaproc_realisasi_tender_dki_jakarta_2025.csv  realisasi_dki_jakarta_2024_2026.csv
datasets/manifests/: model_split.json  source_manifest.json
datasets/processed/: model_features.csv
datasets/raw/: inaproc_realisasi_tender_dki_jakarta_2026.csv
frontend/: README.md  package-lock.json  package.json  playwright.config.ts
modeling/: build_baseline_ranking.py  evaluate_anomaly_ranking.py  explain_anomaly_ranking.py  freeze_artifacts.py  train_isolation_forest.py
pipelines/: analyze_tender_data.py  audit_source_data.py  build_canonical_dataset.py  build_model_features.py  define_model_split.py  enrich_tender_details.py  report_enrichment_coverage.py  verify_source_manifest.py
reports/backend/: endpoint_contract.md  openapi_paths.json  performance_probe.json
reports/data/: canonical_data_quality.json  canonical_data_quality.md  enrichment_coverage.json  enrichment_coverage.md  (+2 more)
tests/: test_analyze_tender_data.py  test_audit_source_data.py  test_be_artifact_store.py  test_be_dashboard.py  test_be_export.py  test_be_integration_contract.py  test_be_packages.py  test_be_ranking.py  test_be_security.py  test_be_startup.py  test_be_system.py  test_build_baseline_ranking.py  test_build_canonical_dataset.py  test_build_model_features.py  test_define_model_split.py  test_enrich_tender_details.py  test_enrichment_coverage.py  test_environment.py  test_evaluate_anomaly_ranking.py  test_explain_anomaly_ranking.py  test_freeze_artifacts.py  test_source_manifest.py  test_train_isolation_forest.py
(+1341 files in other folders)
