[project]
name = "dki-tender-inspection-priority"
version = "0.1.0"
description = "Inspection-priority ranking for DKI Jakarta completed tenders"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.139.0",
    "joblib>=1.5.3",
    "numpy>=2.4.6",
    "pandas>=3.0.3",
    "scikit-learn>=1.9.0",
    "uvicorn>=0.51.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/procurement_priority"]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.1.1",
    "ruff>=0.15.21",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src", "."]
filterwarnings = [
    # starlette 1.3+ introduced StarletteDeprecationWarning for httpx TestClient;
    # suppress until httpx2 integration in FastAPI/starlette stabilises.
    "ignore:Using.*httpx.*starlette",
    "ignore::DeprecationWarning:starlette",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["E402"]
"modeling/*" = ["E402"]
"pipelines/*" = ["E402"]
"backend/*" = ["E402"]
